--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Guscraftin/Bot-mascotte#readme",
   "dependencies": {
+    "cron": "^2.4.0",
     "discord.js": "^14.11.0",
     "dotenv": "16.0.3",
     "glob": "8.0.3",
