--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Guscraftin/Bot-mascotte#readme",
   "dependencies": {
     "cron": "^2.4.0",
+    "discord-html-transcripts": "^3.1.5",
     "discord.js": "^14.11.0",
     "dotenv": "16.0.3",
     "glob": "8.0.3",
