--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord.js": "^14.11.0",
     "dotenv": "16.0.3",
     "glob": "8.0.3",
+    "node-fetch": "^3.3.2",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6"
   }
