--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "homepage": "https://github.com/Guscraftin/Bot-mascotte#readme",
   "dependencies": {
+    "@azure/identity": "^4.0.0",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "cron": "^2.4.0",
     "discord-html-transcripts": "^3.1.5",
     "discord.js": "^14.11.0",
     "dotenv": "16.0.3",
     "glob": "8.0.3",
+    "isomorphic-fetch": "^3.0.0",
     "node-fetch": "^3.3.2",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6"
